// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders an object as a list of key value pairs 1`] = `
<dl
  className="descriptionList"
>
  <div
    className="termGroup"
  >
    <dd
      className="base regular base blue"
      style={Object {}}
    >
      Issued
    </dd>
    <dt
      className="base regular base greyBlue"
      style={Object {}}
    >
      2018-12-08
    </dt>
  </div>
  <div
    className="termGroup"
  >
    <dd
      className="base regular base blue"
      style={Object {}}
    >
      Due
    </dd>
    <dt
      className="base regular base greyBlue"
      style={Object {}}
    >
      2019-01-06
    </dt>
  </div>
</dl>
`;

exports[`renders an object as a list of key value pairs with an element 1`] = `
<dl
  className="descriptionList"
>
  <div
    className="termGroup"
  >
    <dd
      className="base regular base blue"
      style={Object {}}
    >
      Foo
    </dd>
    <dt
      className="base regular base greyBlue"
      style={Object {}}
    >
      Foo
    </dt>
  </div>
  <div
    className="termGroup"
  >
    <dd
      className="base regular base blue"
      style={Object {}}
    >
      Bar
    </dd>
    <dt
      className="base regular base greyBlue"
      style={Object {}}
    >
      Bar
    </dt>
  </div>
</dl>
`;
